--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
   "dependencies": {
     "immutable": "^3.8.1",
     "react": "^15.1.0",
+    "react-addons-pure-render-mixin": "^15.1.0",
     "react-dom": "^15.1.0",
     "todomvc-app-css": "^2.0.6"
   },
