--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "css-loader": "^0.23.1",
     "jsdom": "^9.2.1",
     "mocha": "^2.5.3",
+    "react-addons-test-utils": "^15.1.0",
     "react-hot-loader": "^1.3.0",
     "style-loader": "^0.13.1",
     "webpack": "^1.13.1",
